fix overflow on hero component

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -102,7 +102,7 @@
 
 @media screen and (max-width: 450px) {
   #home {
-    padding: 5rem 2rem 2rem 0;
+    padding: 5rem 0rem 1rem 0;
 
     .first-name {
       margin-bottom: 1rem !important;
